// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FAQs /> opens and closes the <FAQs /> component 1`] = `
<div
  class="faq__Container-sc-1fpmeid-0 fiRRKI"
>
  <div
    class="faq__Inner-sc-1fpmeid-2 iJVDwM"
  >
    <h1
      class="faq__Title-sc-1fpmeid-3 iaMehs"
    >
      Frequently Asked Questions
    </h1>
    <div
      class="faq__Frame-sc-1fpmeid-1 jZsxmx"
    >
      <div
        class="faq__Item-sc-1fpmeid-4 dxdFzV"
      >
        <div
          class="faq__Header-sc-1fpmeid-5 enGbDF"
        >
          What is Binge Box?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="faq__Body-sc-1fpmeid-6 kLYZhB closed"
          data-testid="FAQs-body"
        >
          <span>
            Binge Box is a streaming service that offers a wide variety of award-winning TV programmes, films, anime, documentaries and more – on thousands of internet-connected devices.

You can watch as much as you want, whenever you want, without a single advert – all for one low monthly price. There's always something new to discover, and new TV programmes and films are added every week!
          </span>
        </div>
      </div>
      <div
        class="faq__Item-sc-1fpmeid-4 dxdFzV"
      >
        <div
          class="faq__Header-sc-1fpmeid-5 enGbDF"
        >
          How much does Binge Box cost?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="faq__Body-sc-1fpmeid-6 kLYZhB closed"
          data-testid="FAQs-body"
        >
          <span>
            Watch Binge Box on your smartphone, tablet, smart TV, laptop or streaming device, all for one low fixed monthly fee. Plans start from Rs 2 a month. No extra costs or contracts.

          </span>
        </div>
      </div>
      <div
        class="faq__Item-sc-1fpmeid-4 dxdFzV"
      >
        <div
          class="faq__Header-sc-1fpmeid-5 enGbDF"
        >
          Where can I watch?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="faq__Body-sc-1fpmeid-6 kLYZhB closed"
          data-testid="FAQs-body"
        >
          <span>
            Watch anywhere, anytime, on an unlimited number of devices. Sign in with your Binge Box account to watch instantly on the web at BingePhilic.com from your personal computer or on any internet-connected device that offers theBinge Box app, including smart TVs, smartphones, tablets, streaming media players and game consoles.

You can also download your favourite programmes with the iOS, Android, or Windows 10 app. Use downloads to watch while you're on the go and without an internet connection. Take Netflix with you anywhere.
          </span>
        </div>
      </div>
      <div
        class="faq__Item-sc-1fpmeid-4 dxdFzV"
      >
        <div
          class="faq__Header-sc-1fpmeid-5 enGbDF"
        >
          How do I cancel?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="faq__Body-sc-1fpmeid-6 kLYZhB closed"
          data-testid="FAQs-body"
        >
          <span>
            Binge Box is flexible. There are no annoying contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account at any time.
          </span>
        </div>
      </div>
      <div
        class="faq__Item-sc-1fpmeid-4 dxdFzV"
      >
        <div
          class="faq__Header-sc-1fpmeid-5 enGbDF"
        >
          What can I watch on Binge Box?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="faq__Body-sc-1fpmeid-6 kLYZhB closed"
          data-testid="FAQs-body"
        >
          <span>
            Binge Box has an extensive library of feature films, documentaries, TV programmes, anime, award-winning Binge Box originals, and more. Watch as much as you want, any time you want.
          </span>
        </div>
      </div>
      <div
        class="faq__Item-sc-1fpmeid-4 dxdFzV"
      >
        <div
          class="faq__Header-sc-1fpmeid-5 enGbDF"
        >
          What is the motive for the Binge Box ?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="faq__Body-sc-1fpmeid-6 kLYZhB closed"
          data-testid="FAQs-body"
        >
          <span>
            Binge Box is a Mini Project just for educational purposes. It mainly aids for the study of responsive Web App using React ,Payment Gateways and Cloud Firestore.Enjoy the little clips made for this project :-)
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FAQs /> renders the <FAQs /> with populated data 1`] = `
<div
  class="faq__Container-sc-1fpmeid-0 fiRRKI"
>
  <div
    class="faq__Inner-sc-1fpmeid-2 iJVDwM"
  >
    <h1
      class="faq__Title-sc-1fpmeid-3 iaMehs"
    >
      Frequently Asked Questions
    </h1>
    <div
      class="faq__Frame-sc-1fpmeid-1 jZsxmx"
    >
      <div
        class="faq__Item-sc-1fpmeid-4 dxdFzV"
      >
        <div
          class="faq__Header-sc-1fpmeid-5 enGbDF"
        >
          What is Binge Box?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="faq__Body-sc-1fpmeid-6 kLYZhB closed"
        >
          <span>
            Binge Box is a streaming service that offers a wide variety of award-winning TV programmes, films, anime, documentaries and more – on thousands of internet-connected devices.

You can watch as much as you want, whenever you want, without a single advert – all for one low monthly price. There's always something new to discover, and new TV programmes and films are added every week!
          </span>
        </div>
      </div>
      <div
        class="faq__Item-sc-1fpmeid-4 dxdFzV"
      >
        <div
          class="faq__Header-sc-1fpmeid-5 enGbDF"
        >
          How much does Binge Box cost?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="faq__Body-sc-1fpmeid-6 kLYZhB closed"
        >
          <span>
            Watch Binge Box on your smartphone, tablet, smart TV, laptop or streaming device, all for one low fixed monthly fee. Plans start from Rs 2 a month. No extra costs or contracts.

          </span>
        </div>
      </div>
      <div
        class="faq__Item-sc-1fpmeid-4 dxdFzV"
      >
        <div
          class="faq__Header-sc-1fpmeid-5 enGbDF"
        >
          Where can I watch?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="faq__Body-sc-1fpmeid-6 kLYZhB closed"
        >
          <span>
            Watch anywhere, anytime, on an unlimited number of devices. Sign in with your Binge Box account to watch instantly on the web at BingePhilic.com from your personal computer or on any internet-connected device that offers theBinge Box app, including smart TVs, smartphones, tablets, streaming media players and game consoles.

You can also download your favourite programmes with the iOS, Android, or Windows 10 app. Use downloads to watch while you're on the go and without an internet connection. Take Netflix with you anywhere.
          </span>
        </div>
      </div>
      <div
        class="faq__Item-sc-1fpmeid-4 dxdFzV"
      >
        <div
          class="faq__Header-sc-1fpmeid-5 enGbDF"
        >
          How do I cancel?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="faq__Body-sc-1fpmeid-6 kLYZhB closed"
        >
          <span>
            Binge Box is flexible. There are no annoying contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account at any time.
          </span>
        </div>
      </div>
      <div
        class="faq__Item-sc-1fpmeid-4 dxdFzV"
      >
        <div
          class="faq__Header-sc-1fpmeid-5 enGbDF"
        >
          What can I watch on Binge Box?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="faq__Body-sc-1fpmeid-6 kLYZhB closed"
        >
          <span>
            Binge Box has an extensive library of feature films, documentaries, TV programmes, anime, award-winning Binge Box originals, and more. Watch as much as you want, any time you want.
          </span>
        </div>
      </div>
      <div
        class="faq__Item-sc-1fpmeid-4 dxdFzV"
      >
        <div
          class="faq__Header-sc-1fpmeid-5 enGbDF"
        >
          What is the motive for the Binge Box ?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="faq__Body-sc-1fpmeid-6 kLYZhB closed"
        >
          <span>
            Binge Box is a Mini Project just for educational purposes. It mainly aids for the study of responsive Web App using React ,Payment Gateways and Cloud Firestore.Enjoy the little clips made for this project :-)
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
